# openclaw-minimax-docker

./: .gitignore  README.md  pyproject.toml  upload-to-aliyun.sh
.sisyphus/plans/: openclaw-network-fix.md  pinchtab-浏览器替换方案.md
docs/: Detector_Fixer_契约设计.md  PRD_v2.1_实施方案.md  PinchTab_浏览器替换方案.md  v2.0_v2.1_双轨同步实施方案.md  v2.0_实施路线图（兼容v2.1预埋约束）.md  v2.0_最小闭环定义.md  即梦登录流程.md  策略闸门设计.md  统一事件模型设计.md
github-deploy/: .env.example  .gitignore  DEPLOY-GUIDE.md  README.md  deploy.sh  docker-compose.yml  openclaw.json
github_to_notebooklm/: README.md  SKILL.md  __init__.py  core.py  skill.py
openclaw-latest-release/: .env.example  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  export-image.sh  openclaw.json  push-acr.sh
openclaw-latest-release/deploy-bundle/: .env  README.md  build-info.env  deploy.sh  docker-compose.yml  openclaw.json  rebuild-openspace-venv.sh
openclaw-latest-release/deploy-bundle/openspace-host-skills/: README.md
openclaw-latest-release/deploy-bundle/pinchtab-plugin/: README.md  index.ts  openclaw.plugin.json  package.json
openclaw-latest-release/deploy-bundle/skill/pinchtab/: SKILL.md
openclaw-latest-release/deploy-bundle/skill/pinchtab/references/: agent-optimization.md  api.md  commands.md  env.md  mcp.md  profiles.md
openclaw-minimax-docker/: .env.example  Dockerfile  docker-compose.yml  ssh密钥连接配置指南.md  交付文档.md
openclaw-minimax-docker/openclaw_data/: openclaw.json
openclaw20260323/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  export-image.sh
